--- a/index.html
+++ b/index.html
@@ -67,12 +67,6 @@
   <label for="valor2">Valor da 2ª Aposta (opcional)</label>
   <input type="number" id="valor2" step="0.01" />
 
-  <label for="tipo">Objetivo</label>
-  <select id="tipo">
-    <option value="minimizar_perda" selected>Minimizar Perda</option>
-    <option value="garantir_lucro">Garantir Lucro (Arbitragem)</option>
-  </select>
-
   <div class="botoes-container">
     <button onclick="calcularHedge()">Calcular</button>
     <button onclick="fecharPosicao()">Fechar Posição</button>
@@ -126,7 +120,6 @@
       const valor1 = parseFloat(document.getElementById('valor1').value);
       const odd1 = parseFloat(document.getElementById('odd1').value);
       const odd2 = parseFloat(document.getElementById('odd2').value);
-      const tipo = document.getElementById('tipo').value;
       const valor2Manual = parseFloat(document.getElementById('valor2').value);
 
       if (!valor1 || !odd1 || !odd2) {
@@ -135,17 +128,7 @@
         return;
       }
 
-      const p1 = 1 / odd1;
-      const p2 = 1 / odd2;
-      const arbitragem = (p1 + p2) < 1;
-
-      let valor2 = valor2Manual || 0;
-      if (!valor2Manual) {
-        valor2 = tipo === 'garantir_lucro'
-          ? (valor1 * odd1) / odd2
-          : valor2 = (valor1 * odd1) / (odd1 + odd2);
-      }
-
+      let valor2 = valor2Manual || (valor1 * odd1) / (odd1 + odd2);
       const total = valor1 + valor2;
       const novaUnidade = total / valor1;
 
@@ -161,14 +144,10 @@
         `Aposta 2: R$${valor2.toFixed(2)} | Lucro: R$${lucro2.toFixed(2)} (Odd efetiva: ${oddEfetiva2})\n\n` +
         `Nova Unidade: ${novaUnidade.toFixed(2)}`;
 
-      if (tipo === 'garantir_lucro') {
-        textoResultado += `\nArbitragem: ${arbitragem ? '✅ Sim' : '❌ Não'}`;
-      }
-
       document.getElementById('resultado1').style.display = 'block';
       document.getElementById('resultado1').innerText = textoResultado;
     }
-  
+
     function fecharPosicao() {
       const valor1 = parseFloat(document.getElementById('valor1').value);
       const odd1 = parseFloat(document.getElementById('odd1').value);
@@ -214,11 +193,14 @@
       const apostas = odds.map(o => (total * (1 / o)) / somaInversa);
       const lucro = apostas.map((v, i) => (v * odds[i]) - total);
       const oddEfetiva = apostas.map((v, i) => ((v * odds[i]) / total).toFixed(2));
+      const arbitragem = somaInversa < 1;
 
       document.getElementById(resultadoId).style.display = 'block';
-      document.getElementById(resultadoId).innerText = apostas.map((v, i) =>
-        `Aposta ${i + 1}: R$${v.toFixed(2)} | Lucro: R$${lucro[i].toFixed(2)} (Odd efetiva: ${oddEfetiva[i]})`
-      ).join('\n');
+      document.getElementById(resultadoId).innerText =
+        apostas.map((v, i) =>
+          `Aposta ${i + 1}: R$${v.toFixed(2)} | Lucro: R$${lucro[i].toFixed(2)} (Odd efetiva: ${oddEfetiva[i]})`
+        ).join('\n') +
+        `\n\nArbitragem: ${arbitragem ? '✅ Sim' : '❌ Não'}`;
     }
 
     function calcularDutchingPorValores(valoresIds, oddsIds, resultadoId) {
