--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             </div>
 
             <fieldset id="analise_geral_fieldset" class="main-fieldset">
-                <legend class="fieldset-legend-main">Analise</legend>
+                <legend class="fieldset-legend-main">Análise</legend>
                 <div class="sub-group">
                     <p class="question-title">1X2 (2+ Gols Folga Sobre Consenso)</p>
                     <div class="options-container">
