--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <h1>Realização e Validação de Operações</h1>
         <a href="realizacao.html" class="button">Registro de Operação</a>
         <a href="validacao.html" class="button">Validação de Operação</a>
+        <a href="calculadora.html" class="button">Cálculos e Predições</a>
     </div>
 </body>
 </html>
