--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Realização e Validação de Operações</h1>
+        <h1>Bet</h1>
         <a href="realizacao.html" class="button">Registro de Operação</a>
         <a href="validacao.html" class="button">Validação de Operação</a>
         <a href="calculadora.html" class="button">Cálculos e Predições</a>
