--- a/realizacao.html
+++ b/realizacao.html
@@ -611,7 +611,7 @@
                         });
                         return; 
                     }
-                    // Passa false para sortAlphabetically para Referencias, pois o doGet já ordenou decrescente
+                    // Passa false para sortAlphabetically para Referencias, pois o doGet já ordenou decrescente - 
                     if (data.Referencias) populateSelect('referencia_select', data.Referencias);
                     
                     // Para outras listas, populateSelect as ordenará A-Z (ou o doGet já as ordenou A-Z)
