--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal de Operações</title>
+    <link rel="icon" href="/favicon.png" type="image/png">
     <style>
         body { font-family: "Times New Roman", serif; background-color: #07251F; color: #EAF9E1; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; text-align: center; }
         .container { border: 1px solid #d4af37; padding: 40px 60px; border-radius: 12px; background-color: #103a2f; }
