--- a/realizacao.html
+++ b/realizacao.html
@@ -174,8 +174,8 @@
             <div class="form-group">
                 <label for="referencia_select">Referência</label>
                 <select id="referencia_select" name="referencia_select" required>
-                    <option value="" disabled selected>Carregando ou adicione...</option>
-                    <option value="outro_referencia">Adicionar Nova Referência...</option>
+                    <option value="" disabled selected> ou adicione</option>
+                    <option value="outro_referencia">Adicionar Nova Referência</option>
                 </select>
                 <input type="text" id="outra_referencia_input" name="outra_referencia_input" class="dynamic-input" placeholder="Digite a nova referência" style="display: none;">
             </div>
@@ -183,8 +183,8 @@
             <div class="form-group">
                 <label for="estrategia_select">Estratégia</label>
                 <select id="estrategia_select" name="estrategia_select" required>
-                    <option value="" disabled selected>Carregando...</option>
-                    <option value="outro_estrategia">Outro...</option>
+                    <option value="" disabled selected></option>
+                    <option value="outro_estrategia"></option>
                 </select>
                 <input type="text" id="outra_estrategia_input" name="outra_estrategia_input" class="dynamic-input" placeholder="Digite a nova estratégia" style="display: none;">
             </div>
@@ -192,8 +192,8 @@
             <div class="form-group">
                 <label for="esporte_select">Esporte</label>
                 <select id="esporte_select" name="esporte_select" required>
-                     <option value="" disabled selected>Carregando...</option>
-                     <option value="outro_esporte">Outro...</option>
+                     <option value="" disabled selected></option>
+                     <option value="outro_esporte"></option>
                 </select>
                 <input type="text" id="outro_esporte_input" name="outro_esporte_input" class="dynamic-input" placeholder="Digite o novo esporte" style="display: none;">
             </div>
@@ -291,8 +291,8 @@
             <div class="form-group">
                 <label for="casa_apostas_select">Casa de Apostas (Bet)</label>
                 <select id="casa_apostas_select" name="casa_apostas_select" required>
-                    <option value="" disabled selected>Carregando...</option>
-                    <option value="outro_casa_apostas">Outro...</option>
+                    <option value="" disabled selected></option>
+                    <option value="outro_casa_apostas"></option>
                 </select>
                 <input type="text" id="outra_casa_apostas_input" name="outra_casa_apostas_input" class="dynamic-input" placeholder="Digite a nova casa" style="display: none;">
             </div>
@@ -300,8 +300,8 @@
             <div class="form-group">
                 <label for="campeonato_select">Campeonato</label>
                 <select id="campeonato_select" name="campeonato_select" required>
-                    <option value="" disabled selected>Carregando...</option>
-                    <option value="outro_campeonato">Adicionar Novo Campeonato...</option>
+                    <option value="" disabled selected></option>
+                    <option value="outro_campeonato">Adicionar Novo Campeonato</option>
                 </select>
                 <input type="text" id="outro_campeonato_input" name="outro_campeonato_input" class="dynamic-input" placeholder="Digite o nome do campeonato" style="display: none;">
             </div>
@@ -309,8 +309,8 @@
             <div class="form-group">
                 <label for="perfil_partida_select">Perfil da Partida</label>
                 <select id="perfil_partida_select" name="perfil_partida_select" required>
-                    <option value="" disabled selected>Carregando...</option>
-                    <option value="outro_perfil_partida">Outro...</option>
+                    <option value="" disabled selected></option>
+                    <option value="outro_perfil_partida"></option>
                 </select>
                 <input type="text" id="outro_perfil_partida_input" name="outro_perfil_partida_input" class="dynamic-input" placeholder="Digite o novo perfil" style="display: none;">
             </div>
@@ -318,8 +318,8 @@
             <div class="form-group">
                 <label for="home_team_reordered_select">Home (Equipe da Casa)</label>
                 <select id="home_team_reordered_select" name="home_team_reordered_select" required> 
-                    <option value="" disabled selected>Carregando...</option>
-                    <option value="outro_home_team_reordered">Adicionar Nova Equipe...</option>
+                    <option value="" disabled selected></option>
+                    <option value="outro_home_team_reordered">Adicionar Nova Equipe</option>
                 </select>
                 <input type="text" id="outro_home_team_reordered_input" name="outro_home_team_reordered_input" class="dynamic-input" placeholder="Digite o nome da equipe" style="display: none;">
             </div>
@@ -327,22 +327,22 @@
             <div class="form-group">
                 <label for="away_team_reordered_select">Away (Equipe Visitante)</label>
                 <select id="away_team_reordered_select" name="away_team_reordered_select" required> 
-                    <option value="" disabled selected>Carregando...</option>
-                    <option value="outro_away_team_reordered">Adicionar Nova Equipe...</option>
+                    <option value="" disabled selected></option>
+                    <option value="outro_away_team_reordered">Adicionar Nova Equipe</option>
                 </select>
                 <input type="text" id="outro_away_team_reordered_input" name="outro_away_team_reordered_input" class="dynamic-input" placeholder="Digite o nome da equipe" style="display: none;">
             </div>
 
             <div class="form-group">
-                <label for="stake_select">Stake</label>
+                <label for="stake_select">Stake (Un)</label>
                 <select id="stake_select" name="stake_select" required>
-                    <option value="" disabled selected>Carregando...</option>
+                    <option value="" disabled selected></option>
                     <option value="0.2 Un">0.2 Un</option>
                     <option value="0.5 Un">0.5 Un</option>
                     <option value="1 Un">1 Un</option>
                     <option value="2 Un">2 Un</option>
                     <option value="2.5 Un">2.5 Un</option>
-                    <option value="outro_stake">Outra Stake...</option>
+                    <option value="outro_stake">Outra Stake</option>
                 </select>
                 <input type="number" id="outra_stake_input" name="outra_stake_input" class="dynamic-input" placeholder="Digite o valor numérico (ex: 3.5)" step="0.1" style="display: none;">
             </div>
@@ -443,7 +443,7 @@
                 </div>
                 <div class="form-group">
                     <label for="mercados_obs_realizacao">Outros/OBS (Mercados)</label>
-                    <textarea id="mercados_obs_realizacao" name="mercados_obs_realizacao" rows="4" placeholder="Descreva outros mercados explorados ou adicione observações..."></textarea>
+                    <textarea id="mercados_obs_realizacao" name="mercados_obs_realizacao" rows="4" placeholder="Descreva outros mercados explorados ou adicione observações"></textarea>
                 </div>
             </fieldset>
 
@@ -469,7 +469,7 @@
                 </div>
                 <div class="form-group">
                     <label for="op_obs_implementacao_realizacao">Outros / OBS (Implementação)</label>
-                    <textarea id="op_obs_implementacao_realizacao" name="op_obs_implementacao_realizacao" rows="4" placeholder="Descreva outros problemas ou adicione observações..."></textarea>
+                    <textarea id="op_obs_implementacao_realizacao" name="op_obs_implementacao_realizacao" rows="4" placeholder="Descreva outros problemas ou adicione observações"></textarea>
                 </div>
             </fieldset>
 
@@ -584,7 +584,7 @@
                     selectElement.remove(i);
                 }
             }
-            let finalOptions = Array.isArray(optionsArray) ? [...optionsArray] : [];
+            let finalOptions = Array.isArray(optionsArray) ? [optionsArray] : [];
             if (selectId === 'referencia_select' || selectId === 'referencia_realizacao_select') {
                 finalOptions.sort((a, b) => {
                     const numA = parseInt(String(a).replace(/[^0-9]/g, ''), 10);
@@ -681,7 +681,7 @@
 
                     // Lógica de sucesso e redirecionamento
                     formRealizacao.style.display = 'none';
-                    mensagemStatus.textContent = 'Enviando registro, por favor aguarde...';
+                    mensagemStatus.textContent = 'Enviando registro, por favor aguarde';
                     mensagemStatus.className = 'sucesso';
                     mensagemStatus.style.display = 'block';
 
@@ -692,7 +692,7 @@
                         body: dadosDoFormulario,
                     })
                     .then(response => {
-                        mensagemStatus.textContent = 'Operação registrada com sucesso! Redirecionando para a página inicial...';
+                        mensagemStatus.textContent = 'Operação registrada com sucesso! Redirecionando para a página inicial';
                         mensagemStatus.className = 'sucesso';
 
                         setTimeout(() => {
