--- a/validacao.html
+++ b/validacao.html
@@ -83,8 +83,8 @@
             <div class="form-group">
                 <label for="estrategia_select_val">Estratégia Utilizada</label>
                 <select id="estrategia_select_val" name="estrategia_select_val" required>
-                    <option value="" disabled selected>Carregando...</option>
-                    <option value="outro_estrategia_val">Outro...</option>
+                    <option value="" disabled selected></option>
+                    <option value="outro_estrategia_val"></option>
                 </select>
                 <input type="text" id="outra_estrategia_val_input" name="outra_estrategia_val_input" class="dynamic-input" placeholder="Digite a nova estratégia" style="display: none;">
             </div>
@@ -92,8 +92,8 @@
             <div class="form-group">
                 <label for="esporte_select_val">Esporte</label>
                 <select id="esporte_select_val" name="esporte_select_val" required>
-                     <option value="" disabled selected>Carregando...</option>
-                     <option value="outro_esporte_val">Outro...</option>
+                     <option value="" disabled selected></option>
+                     <option value="outro_esporte_val"></option>
                 </select>
                 <input type="text" id="outro_esporte_val_input" name="outro_esporte_val_input" class="dynamic-input" placeholder="Digite o novo esporte" style="display: none;">
             </div>
