--- a/realizacao.html
+++ b/realizacao.html
@@ -337,11 +337,13 @@
                 <label for="stake_select">Stake (Un)</label>
                 <select id="stake_select" name="stake_select" required>
                     <option value="" disabled selected></option>
-                    <option value="0.2 Un">0.2 Un</option>
-                    <option value="0.5 Un">0.5 Un</option>
-                    <option value="1 Un">1 Un</option>
-                    <option value="2 Un">2 Un</option>
-                    <option value="2.5 Un">2.5 Un</option>
+                    <option value="0.25">0.25</option>
+                    <option value="0.50">0.50</option>
+                    <option value="0.75">0.75</option>
+                    <option value="1.00">1.00</option>
+                    <option value="1.50">1.50</option>
+                    <option value="2.50">2.50</option>
+                    <option value="3.00">3.00</option>
                     <option value="outro_stake">Outra Stake</option>
                 </select>
                 <input type="number" id="outra_stake_input" name="outra_stake_input" class="dynamic-input" placeholder="Digite o valor numérico (ex: 3.5)" step="0.1" style="display: none;">
