--- a/realizacao.html
+++ b/realizacao.html
@@ -174,7 +174,7 @@
             <div class="form-group">
                 <label for="referencia_select">Referência</label>
                 <select id="referencia_select" name="referencia_select" required>
-                    <option value="" disabled selected> ou adicione</option>
+                    <option value="" disabled selected></option>
                     <option value="outro_referencia">Adicionar Nova Referência</option>
                 </select>
                 <input type="text" id="outra_referencia_input" name="outra_referencia_input" class="dynamic-input" placeholder="Digite a nova referência" style="display: none;">
@@ -445,7 +445,7 @@
                 </div>
                 <div class="form-group">
                     <label for="mercados_obs_realizacao">Outros/OBS (Mercados)</label>
-                    <textarea id="mercados_obs_realizacao" name="mercados_obs_realizacao" rows="4" placeholder="Descreva outros mercados explorados ou adicione observações"></textarea>
+                    <textarea id="mercados_obs_realizacao" name="mercados_obs_realizacao" rows="4"></textarea>
                 </div>
             </fieldset>
 
@@ -471,7 +471,7 @@
                 </div>
                 <div class="form-group">
                     <label for="op_obs_implementacao_realizacao">Outros / OBS (Implementação)</label>
-                    <textarea id="op_obs_implementacao_realizacao" name="op_obs_implementacao_realizacao" rows="4" placeholder="Descreva outros problemas ou adicione observações"></textarea>
+                    <textarea id="op_obs_implementacao_realizacao" name="op_obs_implementacao_realizacao" rows="4"></textarea>
                 </div>
             </fieldset>
 
