--- a/realizacao.html
+++ b/realizacao.html
@@ -175,27 +175,27 @@
                 <label for="referencia_select">Referência</label>
                 <select id="referencia_select" name="referencia_select" required>
                     <option value="" disabled selected></option>
-                    <option value="outro_referencia">Adicionar Nova Referência</option>
+                    <option value="outro_referencia">Outro</option>
                 </select>
-                <input type="text" id="outra_referencia_input" name="outra_referencia_input" class="dynamic-input" placeholder="Digite a nova referência" style="display: none;">
+                <input type="text" id="outra_referencia_input" name="outra_referencia_input" class="dynamic-input" style="display: none;">
             </div>
             
             <div class="form-group">
                 <label for="estrategia_select">Estratégia</label>
                 <select id="estrategia_select" name="estrategia_select" required>
                     <option value="" disabled selected></option>
-                    <option value="outro_estrategia"></option>
+                    <option value="outro_estrategia">Outro</option>
                 </select>
-                <input type="text" id="outra_estrategia_input" name="outra_estrategia_input" class="dynamic-input" placeholder="Digite a nova estratégia" style="display: none;">
+                <input type="text" id="outra_estrategia_input" name="outra_estrategia_input" class="dynamic-input" style="display: none;">
             </div>
 
             <div class="form-group">
                 <label for="esporte_select">Esporte</label>
                 <select id="esporte_select" name="esporte_select" required>
                      <option value="" disabled selected></option>
-                     <option value="outro_esporte"></option>
+                     <option value="outro_esporte">Outro</option>
                 </select>
-                <input type="text" id="outro_esporte_input" name="outro_esporte_input" class="dynamic-input" placeholder="Digite o novo esporte" style="display: none;">
+                <input type="text" id="outro_esporte_input" name="outro_esporte_input" class="dynamic-input" style="display: none;">
             </div>
 
             <fieldset id="analise_geral_fieldset_realizacao" class="main-fieldset">
@@ -292,7 +292,7 @@
                 <label for="casa_apostas_select">Casa de Apostas (Bet)</label>
                 <select id="casa_apostas_select" name="casa_apostas_select" required>
                     <option value="" disabled selected></option>
-                    <option value="outro_casa_apostas"></option>
+                    <option value="outro_casa_apostas">Outro</option>
                 </select>
                 <input type="text" id="outra_casa_apostas_input" name="outra_casa_apostas_input" class="dynamic-input" placeholder="Digite a nova casa" style="display: none;">
             </div>
@@ -301,7 +301,7 @@
                 <label for="campeonato_select">Campeonato</label>
                 <select id="campeonato_select" name="campeonato_select" required>
                     <option value="" disabled selected></option>
-                    <option value="outro_campeonato">Adicionar Novo Campeonato</option>
+                    <option value="outro_campeonato">Outro</option>
                 </select>
                 <input type="text" id="outro_campeonato_input" name="outro_campeonato_input" class="dynamic-input" placeholder="Digite o nome do campeonato" style="display: none;">
             </div>
@@ -310,7 +310,7 @@
                 <label for="perfil_partida_select">Perfil da Partida</label>
                 <select id="perfil_partida_select" name="perfil_partida_select" required>
                     <option value="" disabled selected></option>
-                    <option value="outro_perfil_partida"></option>
+                    <option value="outro_perfil_partida">Outro</option>
                 </select>
                 <input type="text" id="outro_perfil_partida_input" name="outro_perfil_partida_input" class="dynamic-input" placeholder="Digite o novo perfil" style="display: none;">
             </div>
@@ -319,7 +319,7 @@
                 <label for="home_team_reordered_select">Home (Equipe da Casa)</label>
                 <select id="home_team_reordered_select" name="home_team_reordered_select" required> 
                     <option value="" disabled selected></option>
-                    <option value="outro_home_team_reordered">Adicionar Nova Equipe</option>
+                    <option value="outro_home_team_reordered">Outro</option>
                 </select>
                 <input type="text" id="outro_home_team_reordered_input" name="outro_home_team_reordered_input" class="dynamic-input" placeholder="Digite o nome da equipe" style="display: none;">
             </div>
@@ -328,7 +328,7 @@
                 <label for="away_team_reordered_select">Away (Equipe Visitante)</label>
                 <select id="away_team_reordered_select" name="away_team_reordered_select" required> 
                     <option value="" disabled selected></option>
-                    <option value="outro_away_team_reordered">Adicionar Nova Equipe</option>
+                    <option value="outro_away_team_reordered">Outro</option>
                 </select>
                 <input type="text" id="outro_away_team_reordered_input" name="outro_away_team_reordered_input" class="dynamic-input" placeholder="Digite o nome da equipe" style="display: none;">
             </div>
@@ -337,14 +337,7 @@
                 <label for="stake_select">Stake (Un)</label>
                 <select id="stake_select" name="stake_select" required>
                     <option value="" disabled selected></option>
-                    <option value="0.25">0.25</option>
-                    <option value="0.50">0.50</option>
-                    <option value="0.75">0.75</option>
-                    <option value="1.00">1.00</option>
-                    <option value="1.50">1.50</option>
-                    <option value="2.50">2.50</option>
-                    <option value="3.00">3.00</option>
-                    <option value="outro_stake">Outra Stake</option>
+                    <option value="outro_stake">Outro</option>
                 </select>
                 <input type="number" id="outra_stake_input" name="outra_stake_input" class="dynamic-input" placeholder="Digite o valor numérico (ex: 3.5)" step="0.1" style="display: none;">
             </div>
